# yolo-master-edge

./: .gitignore  PROGRESS.md  README.md  TECHNICAL_REPORT.md
apple/: Package.swift  README.md  export_coreml.py
apple/Sources/YOLOMasterCoreML/: main.swift
cpp/: CMakeLists.txt
cpp/build_portable/: CMakeCache.txt  Makefile  cmake_install.cmake  yolomaster_edge
cpp/include/: backend_factory.hpp  mnn_backend.hpp  ncnn_backend.hpp  yolomaster.hpp
cpp/src/: common.cpp  main.cpp  mnn_backend.cpp  ncnn_backend.cpp  ort_backend.cpp  stb_impl.cpp  trt_backend.cpp
gui/: CMakeLists.txt  README.md  build.ps1
gui/src/: app.cpp  app.hpp  main_win.cpp
jetson/: 10_trt_bench.sh  22_build_ort_trt.sh  DEPLOYMENT_LOG.md  README.md
mac/: DISTRIBUTING.md  Package.swift  README.md  RELEASE_NOTES-1.0.0.md  export_coreml.py  make_app.sh
mac/Resources/: AppIcon.icns
mac/Sources/YOLOMasterApp/: Camera.swift  Info.swift  YOLOMasterApp.swift
mac/Sources/YOLOMasterCoreML/: main.swift
mac/Sources/YOLOMasterKit/: Annotate.swift  Detector.swift  ImageIO.swift  Pipeline.swift
mac/scripts/: make_icon.py  release.sh
models/esmoe_n_visdrone_ncnn/: metadata.yaml  model.ncnn.param  model_ncnn.py
scripts/: _subset_val.py  _verify.sh  eval_map.py  eval_map_standalone.py  make_release.sh  mnn_parity.py  quantize_int8.py
